# ytinu

./: Cargo.toml  Design.md  README.md  TODO.md
src/: app.rs  data.rs  main.rs  server.rs  utils.rs
svelte/: README.md  package-lock.json  package.json  rollup.config.js
svelte/public/: global.css  index.html  normalize.css
svelte/src/: AddGameDialog.svelte  App.scss  App.svelte  ManageGameDialog.svelte  ModEntry.svelte  config.ts  data.d.ts  data.ts  global.scss
svelte/src/dialogs/: AboutDialog.svelte  AddGameDialog.svelte  ManageGameDialog.svelte  SettingsDialog.svelte
